--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,11 @@
 # spring.datasource.url=${DATASOURCE_URL}
 # spring.datasource.username=${DATASOURCE_USERNAME}
 # spring.datasource.password=${DATASOURCE_PASSWORD}
+spring.datasource.url=jdbc:mysql://@containers-us-west-43.railway.app:5485/eshop
+spring.datasource.username=
+spring.datasource.password=
 
 # From Local (MySQL WorkBench)
-# spring.datasource.url=jdbc:mysql://localhost:3306/northwind
+# spring.datasource.url=jdbc:mysql://localhost:3306/eshop
 # spring.datasource.username=daryl
 # spring.datasource.password=Password@123456
