--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@
 # spring.datasource.username=${DATASOURCE_USERNAME}
 # spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.datasource.url=jdbc:mysql://@containers-us-west-43.railway.app:5485/eshop
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=darylg
+spring.datasource.password=darylg
 
 # From Local (MySQL WorkBench)
 # spring.datasource.url=jdbc:mysql://localhost:3306/eshop
